# faerieplay-compiler

./: .gitignore  ChangeLog  CircGen.hs  Common.hs  Container.hs  ErrorWithContext.hs  Fcpp.cf  GenHelper_C.hs  GenHelper_C.templ.cc  Generate.hs  GraphLib.hs  HoistStms.hs  INSTALL.html  Intermediate.hs  LICENSE.txt  Makefile  Mapping.hs  README.html  Runtime.hs  SFDL.cf  SFDL_C.cf  SFDL_C_Fixup.hs  SFDL_Fixup.hs  SashoLib.hs  Sfdl.cf  Space-lean.hs  Space.hs  SplitAST.hs  Stack.hs  TODO  TestReads.hs  Tree.hs  TreeLib.hs  TypeChecker.hs  UDraw.hs  Unroll.hs  add-bnfc-derives.ed  config.make  do_setup.make  example.sfdl  (+19 more)
Faerieplay/: CircGen.hs  Common.hs  Container.hs  ErrorWithContext.hs  GenHelper_C.hs  GenHelper_SFDL.hs  GraphLib.hs  HoistStms.hs  Intermediate.hs  Mapping.hs  Runtime.hs  SFDL_C_Fixup.hs  SFDL_Fixup.hs  SashoLib.hs  Space-big.hs  Space-lean.hs  Space.hs  Stack.hs  TestReads.hs  Tree.hs  TreeLib.hs  TypeChecker.hs  UDraw.hs  Unroll.hs  Version.hs  Version.hs.tok  sfdlc.hs
Faerieplay/Bnfc/Fcpp/: Abs.hs  Doc.tex  ErrM.hs  Lex.hs  Lex.x  Par.hs  Par.y  Print.hs  Skel.hs  Test.hs
Faerieplay/Bnfc/Sfdl/: Abs.hs  Doc.tex  ErrM.hs  Lex.hs  Lex.x  Par.hs  (+4 more)
doc/: Makefile  sfdlc.texi  values.texi  version.texi
samples/sfdl/: Makefile  README.html  cond-array-101.fig  emacs.el  gcd-input.cjs  gcd.c  gcd.sfdl  insert-sort-input.cjs  insert-sort.sfdl  log4cpp.properties  notes.txt  permute-sum-input.cjs  permute-sum-v1.sfdl  permute-sum.sfdl  permute-sum.sfdlv2  shared.make  simplest.sfdl  simplest.sfdlv1  simplest.sfdlv2  sum.sfdl
sfdl/: Makefile
tests/: Makefile  add-scalars.sfdl  array-outofbounds-input.cjs  array-outofbounds.sfdl  array-v0.sfdl  array-v1.sfdl  bug-input.cjs  bug.sfdl  cond-101.sfdl  cond-array-101.sfdl  demo-cct.sfdl  display-item.sfdl  log4cpp.properties  mainargs1.sfdl  mainargs2.sfdl  mainargs3.lisp  mainargs3.sfdl  millionaires.sfdl  nested-loops.sfdl  no-func-return.sfdl  no-main-return.sfdl  scopes-test.sfdl  test-array.sfdl  test-direct-call.sfdl  test-lexical-scopes.sfdl  test-scalar.sfdl  testprint.sfdl  testref.sfdl
tests-fcpp/: GenHelper_C.templ.cc  Makefile  add-scalars.fcpp  hello1.fcpp  millionaires.fcpp  structs.fcpp
